examples/invalid/02_IOTooManyArgs.lune
module Bad exposing (x)

x : IO Int Bool
x =
  unit
